--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -2,19 +2,16 @@ name: Lint
 
 on: push
 
-.yarn-cache: &yarn-cache
-  uses: actions/cache@v2
-  with:
-    path: ~/.yarn/cache
-
-
 jobs:
   lint:
     runs-on: ubuntu-latest
     container: node:16-alpine
     steps:
       - uses: actions/checkout@v2
-      - *yarn-cache
+      - uses: actions/cache@v2
+        with:
+          path: ~/.yarn/cache
+
       - run: yarn install
       - run: yarn lint --max-warnings 0
 
@@ -24,6 +21,8 @@ jobs:
       TAG: html-to-pdf
     steps:
       - uses: actions/checkout@v2
-      - *yarn-cache
+      - uses: actions/cache@v2
+        with:
+          path: ~/.yarn/cache
       - run: docker build --file deploy/test/Dockerfile --tag ${TAG} .
       - run: docker run --rm ${TAG} yarn test
