--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: ~/.yarn/cache
-
+          key: yarn-cache
       - run: yarn install
       - run: yarn lint --max-warnings 0
 
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
+          key: yarn-cache
           path: ~/.yarn/cache
       - run: docker build --file deploy/test/Dockerfile --tag ${TAG} .
       - run: docker run --rm ${TAG} yarn test
