--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,12 +8,18 @@ jobs:
     container: node:16-alpine
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - uses: martijnhols/actions-cache/restore@main
+        id: cache
         with:
-          path: ~/.yarn/cache
           key: yarn-cache
+          path: ~/.yarn/cache
       - run: yarn install
       - run: yarn lint --max-warnings 0
+      - name: Save caches back
+        uses: martijnhols/actions-cache/save@main
+        with:
+          path: ~/.yarn/cache
+          key: ${{ steps.cache.outputs.primary-key }}
 
   test:
     runs-on: ubuntu-latest
