try to deploy to dockerhub

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -43,7 +43,6 @@ jobs:
       - uses: int128/kaniko-action@v1
         with:
           push: true
+          file: deploy/prod/Dockerfile
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
-          cache: true
-          cache-repository: ghcr.io/${{ github.repository }}/cache
