--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -25,6 +25,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'yarn'
       - uses: docker/metadata-action@v3
         id: metadata
         with:
