Update yarn, refactor a bit

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,16 +1,14 @@
 packageExtensions:
-  "html-to-pdf@*":
-    dependencies:
-      # those below are needed for "@sentry/node" but it did not work specifying it for sentry
-      # so it's configured for main package for now
-      tslib: "*"
-      cookie: "*"
   debug@*:
     dependencies:
       supports-color: "*"
+  html-to-pdf@*:
+    dependencies:
+      cookie: "*"
+      tslib: "*"
   ws@*:
     dependencies:
       bufferutil: "*"
       utf-8-validate: "*"
 
-yarnPath: .yarn/releases/yarn-3.0.0-rc.2.cjs
+yarnPath: .yarn/releases/yarn-3.2.4.cjs
