feat: own dockerfile (#6)
- Build own images for different platforms
- Generalize Dockerfile
- Update yarn, refactor a bit
- update actions

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,14 +8,14 @@ jobs:
     env:
       TAG: html-to-pdf
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'yarn'
       - run: yarn install
       - run: yarn lint --max-warnings 0
       - name: Build container
-        run: docker build --file deploy/test/Dockerfile --tag ${TAG} .
+        run: docker build --file deploy/Dockerfile --target test --tag ${TAG} .
       - name: Run test in a container
         run: docker run --rm ${TAG} yarn test
