--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'yarn'
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
       - name: Define docker image metadata
-        uses: docker/metadata-action@v3
-        id: metadata
+        uses: docker/metadata-action@v4
+        id: meta
         with:
           images: muehlemannpopp/html-to-pdf
           tags: |
@@ -27,14 +30,15 @@ jobs:
             type=semver,pattern={{major}}
             type=sha,prefix=git-,format=short
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push an image to DockerHub
-        uses: int128/kaniko-action@v1
+      - name: Build and push
+        uses: docker/bake-action@v2
         with:
           push: true
-          file: deploy/prod/Dockerfile
-          tags: ${{ steps.metadata.outputs.tags }}
-          labels: ${{ steps.metadata.outputs.labels }}
+          files: |
+            ./docker-bake.hcl
+            ${{ steps.meta.outputs.bake-file }}
+          targets: build
