--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,13 @@
 name: Release version
 
-on:
-  push:
-    branches:
-      - 'main'
-    tags:
-      - 'v*'
+#on:
+#  push:
+#    branches:
+#      - 'main'
+#    tags:
+#      - 'v*'
+
+on: pull_request
 
 jobs:
   build:
