--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           node-version: '16'
           cache: 'yarn'
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v2
+        with:
+          image: tonistiigi/binfmt:qemu-v6.2.0
+          platforms: arm64
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
