--- a/package.json
+++ b/package.json
@@ -59,5 +59,10 @@
   },
   "engines": {
     "node": "~16"
+  },
+  "dependenciesMeta": {
+    "puppeteer-core@18.2.1": {
+      "unplugged": true
+    }
   }
 }
