--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,15 +1,10 @@
-FROM alpine:3.16 as base
-
 ARG RELEASE_ID
 ARG CI_BUILD_DATE
+ARG CHROME_BIN=/usr/bin/chromium-browser
+ARG CHROME_PATH=/usr/lib/chromium/
+ARG PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
-ENV \
-  CHROME_BIN=/usr/bin/chromium-browser \
-  CHROME_PATH=/usr/lib/chromium/ \
-  PUPPETEER_SKIP_DOWNLOAD=1 \
-  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
-  RELEASE_ID=$RELEASE_ID \
-  CI_BUILD_DATE=$CI_BUILD_DATE
+FROM alpine:3.16 as base
 
 # Installs latest Chromium package.
 RUN \
@@ -32,12 +27,24 @@ WORKDIR /app
 
 FROM base as builder
 
+ENV \
+  CHROME_BIN=$CHROME_BIN \
+  CHROME_PATH=$CHROME_PATH \
+  PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 \
+  PUPPETEER_EXECUTABLE_PATH=$PUPPETEER_EXECUTABLE_PATH
+
 COPY . /app
 
 RUN yarn install && yarn build
 
 
 FROM base as prod
+
+ENV \
+  CHROME_BIN=$CHROME_BIN \
+  CHROME_PATH=$CHROME_PATH \
+  RELEASE_ID=$RELEASE_ID \
+  CI_BUILD_DATE=$CI_BUILD_DATE
 
 COPY deploy/local.conf /etc/fonts/local.conf
 COPY --from=builder /app/build/main.prod.js .
@@ -56,6 +63,12 @@ CMD ["/docker-entrypoint.sh"]
 
 FROM prod as dev
 
+ENV \
+  CHROME_BIN=$CHROME_BIN \
+  CHROME_PATH=$CHROME_PATH \
+  RELEASE_ID=$RELEASE_ID \
+  CI_BUILD_DATE=$CI_BUILD_DATE
+
 # change user to bypass write limitations
 USER root
 
@@ -70,6 +83,12 @@ RUN yarn install
 
 
 FROM prod as test
+
+ENV \
+  CHROME_BIN=$CHROME_BIN \
+  CHROME_PATH=$CHROME_PATH \
+  RELEASE_ID=$RELEASE_ID \
+  CI_BUILD_DATE=$CI_BUILD_DATE
 
 # change user to bypass write limitations
 USER root
