try a fix from https://github.com/actions/setup-node/issues/488#issue-1231822552

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -19,8 +19,7 @@ RUN \
   && apk add --no-cache \
     tini make gcc g++ python3 git nodejs npm yarn \
   && mkdir -p /app/build \
-  && addgroup -g 1000 chrome  \
-  && adduser -u 1000 -G chrome -D chrome \
+  && adduser -D chrome \
   && chown -R chrome:chrome /app
 
 WORKDIR /app
