--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,11 @@
 name: Release version
 
-#on:
-#  push:
-#    branches:
-#      - 'main'
-#    tags:
-#      - 'v*'
-
-on: pull_request
+on:
+  push:
+    branches:
+      - 'main'
+    tags:
+      - 'v*'
 
 jobs:
   build:
