--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -12,5 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build container
         run: docker build --file deploy/Dockerfile --target test --tag ${TAG} .
+      - name: Run lint in a container
+        run: docker run --rm ${TAG} yarn lint --max-warnings 0
       - name: Run test in a container
-        run: docker run --rm ${TAG} yarn lint --max-warnings 0 && yarn test
+        run: docker run --rm ${TAG} yarn test
