--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,8 +1,5 @@
 ARG RELEASE_ID
 ARG CI_BUILD_DATE
-ARG CHROME_BIN=/usr/bin/chromium-browser
-ARG CHROME_PATH=/usr/lib/chromium/
-ARG PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 FROM alpine:3.16 as base
 
@@ -27,11 +24,7 @@ WORKDIR /app
 
 FROM base as builder
 
-ENV \
-  CHROME_BIN=$CHROME_BIN \
-  CHROME_PATH=$CHROME_PATH \
-  PUPPETEER_SKIP_DOWNLOAD=1 \
-  PUPPETEER_EXECUTABLE_PATH=$PUPPETEER_EXECUTABLE_PATH
+ENV PUPPETEER_SKIP_DOWNLOAD=1
 
 COPY . /app
 
@@ -39,12 +32,6 @@ RUN yarn install && yarn build
 
 
 FROM base as prod
-
-ENV \
-  CHROME_BIN=$CHROME_BIN \
-  CHROME_PATH=$CHROME_PATH \
-  RELEASE_ID=$RELEASE_ID \
-  CI_BUILD_DATE=$CI_BUILD_DATE
 
 COPY deploy/local.conf /etc/fonts/local.conf
 COPY --from=builder /app/build/main.prod.js .
@@ -64,8 +51,9 @@ CMD ["/docker-entrypoint.sh"]
 FROM prod as dev
 
 ENV \
-  CHROME_BIN=$CHROME_BIN \
-  CHROME_PATH=$CHROME_PATH \
+  CHROME_BIN=/usr/bin/chromium-browser \
+  CHROME_PATH=/usr/lib/chromium/ \
+  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
   RELEASE_ID=$RELEASE_ID \
   CI_BUILD_DATE=$CI_BUILD_DATE
 
@@ -74,9 +62,7 @@ USER root
 
 COPY . /app
 
-RUN \
-  rm main.prod.js \
-  && chown -R chrome ./
+RUN chown -R chrome ./
 
 # change user back to default
 USER chrome
@@ -87,8 +73,9 @@ RUN yarn install
 FROM prod as test
 
 ENV \
-  CHROME_BIN=$CHROME_BIN \
-  CHROME_PATH=$CHROME_PATH \
+  CHROME_BIN=/usr/bin/chromium-browser \
+  CHROME_PATH=/usr/lib/chromium/ \
+  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
   RELEASE_ID=$RELEASE_ID \
   CI_BUILD_DATE=$CI_BUILD_DATE
 
@@ -97,6 +84,4 @@ USER root
 
 COPY . /app
 
-RUN \
-  rm main.prod.js \
-  && yarn install
+RUN yarn install
