--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,6 +8,7 @@ jobs:
     env:
       TAG: html-to-pdf
       PUPPETEER_SKIP_DOWNLOAD: 1
+      DOCKER_BUILDKIT: 1
     steps:
       - uses: actions/checkout@v3
       - name: Build container
