--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # needed to properly run buildx, otherwise buildx fails
       # https://github.com/docker/buildx/issues/495#issuecomment-1043341496
       - name: Set up QEMU
         id: qemu
