--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,6 +13,7 @@ vars:
   COMPOSE: docker-compose --file deploy/docker-compose.yml
 
 env:
+  DOCKER_TARGET: dev
   PUPPETEER_SKIP_DOWNLOAD: 1
 
 tasks:
@@ -88,5 +89,7 @@ tasks:
 
   build:
     desc: Build app image
+    env:
+      DOCKER_TARGET: prod
     cmds:
       - '{{ .COMPOSE }} build {{ .CLI_ARGS }}'
