--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@types/body-parser": "^1.19.0",
     "@types/marked": "^2.0.3",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "marked": "^2.1.2",
     "prom-client": "^13.1.0",
-    "puppeteer": "18.1.0"
+    "puppeteer": "19.2.2",
+    "puppeteer-core": "19.2.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/node": "^16.18.3",
     "@types/supertest": "^2.0.11",
@@ -48,13 +49,13 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "supertest": "^6.1.3",
-    "terser-webpack-plugin": "^5.1.3",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.2"
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0"
   },
   "engines": {
     "node": "~16"
