fix: buildx bake file spec (#7)
- fix dockerfile
- remove i386 arch
- fix puppeteer running on arm
- use a fix from https://github.com/actions/setup-node/issues/488#issue-1231822552
- lint inside container
- remove double build for tests
- upgrade all deps
- fix linter errors

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,6 +12,10 @@ vars:
     nvm use;
   COMPOSE: docker-compose --file deploy/docker-compose.yml
 
+env:
+  DOCKER_TARGET: dev
+  PUPPETEER_SKIP_DOWNLOAD: 1
+
 tasks:
   default: task --list
 
@@ -85,5 +89,7 @@ tasks:
 
   build:
     desc: Build app image
+    env:
+      DOCKER_TARGET: prod
     cmds:
       - '{{ .COMPOSE }} build {{ .CLI_ARGS }}'
