--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,23 +1,7 @@
-FROM node:16-alpine as builder
-
-WORKDIR /app
-COPY . /app
-
-RUN yarn install && yarn build
-
-
-FROM alpine:3.16 as prod
-
 ARG RELEASE_ID
 ARG CI_BUILD_DATE
 
-ENV \
-  CHROME_BIN=/usr/bin/chromium-browser \
-  CHROME_PATH=/usr/lib/chromium/ \
-  PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 \
-  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
-  RELEASE_ID=$RELEASE_ID \
-  CI_BUILD_DATE=$CI_BUILD_DATE
+FROM node:19-alpine as base
 
 # Installs latest Chromium package.
 RUN \
@@ -30,7 +14,7 @@ RUN \
     --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing \
     font-wqy-zenhei \
   && apk add --no-cache \
-    tini make gcc g++ python3 git nodejs npm yarn \
+    tini make gcc g++ python3 git \
   && mkdir -p /app/build \
   && adduser -D chrome \
   && chown -R chrome:chrome /app
@@ -38,13 +22,9 @@ RUN \
 WORKDIR /app
 
 COPY deploy/local.conf /etc/fonts/local.conf
-COPY --from=builder /app/build/main.prod.js .
 COPY favicon.ico .
 COPY deploy/docker-entrypoint.sh /docker-entrypoint.sh
 COPY README.md .
-
-# Run Chrome as non-privileged
-USER chrome
 
 ENTRYPOINT ["tini", "--"]
 
@@ -52,26 +32,55 @@ EXPOSE 4000
 CMD ["/docker-entrypoint.sh"]
 
 
-FROM prod as dev
+FROM base as builder
 
-# change user to bypass write limitations
-USER root
+ENV PUPPETEER_SKIP_DOWNLOAD=1
+
+COPY . /app
+
+RUN yarn install && yarn build
+
+
+FROM base as prod
+
+ENV \
+  CHROME_BIN=/usr/bin/chromium-browser \
+  CHROME_PATH=/usr/lib/chromium/ \
+  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+
+COPY --from=builder /app/build/main.prod.js .
+
+# Run Chrome as non-privileged
+USER chrome
+
+
+FROM base as dev
+
+ENV \
+  CHROME_BIN=/usr/bin/chromium-browser \
+  CHROME_PATH=/usr/lib/chromium/ \
+  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
+  RELEASE_ID=$RELEASE_ID \
+  CI_BUILD_DATE=$CI_BUILD_DATE
 
 COPY . /app
 
 RUN chown -R chrome ./
 
-# change user back to one used by zenika image
 USER chrome
 
 RUN yarn install
 
 
-FROM prod as test
+FROM base as test
 
-# change user to bypass write limitations
-USER root
+ENV \
+  CHROME_BIN=/usr/bin/chromium-browser \
+  CHROME_PATH=/usr/lib/chromium/ \
+  PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
+  RELEASE_ID=$RELEASE_ID \
+  CI_BUILD_DATE=$CI_BUILD_DATE
 
 COPY . /app
 
-RUN yarn
+RUN yarn install
