--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -7,15 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TAG: html-to-pdf
+      PUPPETEER_SKIP_DOWNLOAD: 1
+      DOCKER_BUILDKIT: 1
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-          cache: 'yarn'
-      - run: yarn install
-      - run: yarn lint --max-warnings 0
       - name: Build container
         run: docker build --file deploy/Dockerfile --target test --tag ${TAG} .
+      - name: Run lint in a container
+        run: docker run --rm ${TAG} yarn lint --max-warnings 0
       - name: Run test in a container
         run: docker run --rm ${TAG} yarn test
