--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,13 +12,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      # needed to properly run buildx, otherwise buildx fails
+      # https://github.com/docker/buildx/issues/495#issuecomment-1043341496
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          image: tonistiigi/binfmt:qemu-v6.2.0
+          platforms: amd64,arm64
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          platforms: amd64,arm64
+
       - name: Define docker image metadata
         uses: docker/metadata-action@v4
         id: meta
@@ -29,11 +38,13 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha,prefix=git-,format=short
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push
         uses: docker/bake-action@v2
         with:
