--- a/package.json
+++ b/package.json
@@ -15,49 +15,49 @@
     "test": "jest --colors"
   },
   "dependencies": {
-    "@sentry/node": "^6.7.2",
-    "@sentry/tracing": "^6.9.0",
-    "@types/body-parser": "^1.19.0",
-    "@types/marked": "^2.0.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "marked": "^2.1.2",
-    "prom-client": "^13.1.0",
-    "puppeteer": "^10.4.0"
+    "@sentry/node": "^7.19.0",
+    "@sentry/tracing": "^7.19.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/marked": "^4.0.7",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "marked": "^4.2.2",
+    "prom-client": "^14.1.0",
+    "puppeteer": "19.2.2",
+    "puppeteer-core": "19.2.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.4",
-    "@types/puppeteer": "^5.4.4",
-    "@types/supertest": "^2.0.11",
-    "@types/terser-webpack-plugin": "^5.0.3",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/supertest": "^2.0.12",
+    "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack": "^5.28.0",
-    "@types/webpack-node-externals": "^2.5.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@types/webpack-node-externals": "^2.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "env-cmd": "^10.1.0",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-ts": "^0.4.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.5",
-    "nodemon": "^2.0.7",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.1",
-    "supertest": "^6.1.3",
-    "terser-webpack-plugin": "^5.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.2"
+    "prettier": "^2.7.1",
+    "supertest": "^6.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0"
   },
   "engines": {
-    "node": "~15"
+    "node": "~16"
   }
 }
